todo-app/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    # This rewrites the path from /todo to / for the app
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # <--- THE FIX
  rules:
  - host: "ds-unix.xyz" # Your domain!
    http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
